--- a/luxora.css
+++ b/luxora.css
@@ -15,7 +15,7 @@
         }
 
         .hero {
-            background: url('imagenes/hero-img.png') no-repeat center center/cover ;
+            background: url('hero-img.png') no-repeat center center/cover ;
             height: 85vh;
             display: flex;
             align-items: center;
@@ -545,4 +545,5 @@ button:hover {
 
 .gallery img:hover {
     transform: scale(1.05);
+
 }
